Add index cache and async/batch execution for federated service.